Got JavaME version of Paho client to compile with Cinterion CMTK.